<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#DCF5FD"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/r_amp_r"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:autofillHints="emailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="#fff"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/email"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="#fff"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginStart="122dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jacques_francois"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="37sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/textView3"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/create_a_new_account"
            android:textSize="22sp"
            tools:ignore="TextSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginStart="122dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/sign_in"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>