<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UploadBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jacques_francois"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/read_return"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/welcome4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/fill_out_below_details_to_add_your_book"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:background="#f2f2f2"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:background="#f2f2f2"
            android:ems="10"
            android:hint="@string/author"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:autofillHints="emailAddress"
            android:background="#f2f2f2"
            android:ems="10"
            android:hint="@string/genre"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:background="#f2f2f2"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text|textLongMessage"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="47dp" />

        <Button
            android:id="@+id/button5"
            android:text="@string/upload"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:textColor="@color/white" />
        />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>