<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/img1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jacques_francois"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/read_return"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/welcome2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="New here? Create an account.\nRemember we share your email to the owner of the book you request."
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="#f2f2f2"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:background="#f2f2f2"
            android:ems="10"
            android:hint="@string/email_"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/editText2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="#f2f2f2"
            android:ems="10"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="47dp" />

        <Button
            android:id="@+id/button5"
            android:text="@string/register"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="47dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>