<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/todod"
            app:srcCompat="@drawable/baseline_person_24" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:padding="10dp"
            android:text="@string/nameView"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:padding="15dp"
            android:text="@string/emailView"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <Button
            android:id="@+id/button6"
            android:text="My Books"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <Button
            android:id="@+id/button7"
            android:text="My Orders"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <Button
            android:id="@+id/button8"
            android:text="Logout"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>